// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUItem /> should render when [verified=false] 1`] = `
<withRouter(LinkContainer)
  className="spaced"
  key="foo"
  to="/refs/baz/otus/foo"
>
  <Item__OUTItems
    bsStyle="warning"
  >
    <strong>
      Foo
    </strong>
    <Item__Abbreviation>
      FB
    </Item__Abbreviation>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="tag"
      pullRight={true}
      tip="This OTU is unverified"
    />
  </Item__OUTItems>
</withRouter(LinkContainer)>
`;

exports[`<OTUItem /> should render when [verified=true] 1`] = `
<withRouter(LinkContainer)
  className="spaced"
  key="foo"
  to="/refs/baz/otus/foo"
>
  <Item__OUTItems
    bsStyle={null}
  >
    <strong>
      Foo
    </strong>
    <Item__Abbreviation>
      FB
    </Item__Abbreviation>
  </Item__OUTItems>
</withRouter(LinkContainer)>
`;
